fixed pom file to use the genjavadoc function to export scaladoc data into javadoc so the api can be better seen